--- a/HelloWorld/HelloWorld.vcxproj
+++ b/HelloWorld/HelloWorld.vcxproj
@@ -203,6 +203,9 @@
     <ClInclude Include="game.h" />
     <ClInclude Include="Paddle.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="scores.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
